--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "1.0.0",
   "description": "a chat app",
   "author": "Jahidul Pabel Islam <jahidul.pabel.islam@hotmail.com>",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specififed\" && and exit"
+  },
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.10.2",
     "nodemailer": "^2.7.0",
+    "nodemon": "^1.11.0",
     "socket.io": "^1.7.2"
   },
   "repository": {
