--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.10.2",
+    "isprofanity": "^1.0.9",
     "nodemailer": "^2.7.0",
     "nodemon": "^1.11.0",
     "socket.io": "^1.7.2"
