--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "buddy-support",
   "version": "1.0.0",
-  "description": "a chat app",
+  "description": "A Temporary & Anonymous Chat Application",
   "author": "Jahidul Pabel Islam <jahidul.pabel.islam@hotmail.com>",
   "main": "app.js",
   "scripts": {
